# malcontent

./: .gitlab-ci.yml  NEWS  README  README.md  eos-parental-controls.doap  malcontent.doap  meson.build  meson_options.txt
.gitlab-ci/: cache-subprojects.sh  meson-junit-report.py
.tx/: config
accounts-service/: com.endlessm.ParentalControls.AppFilter.xml  com.endlessm.ParentalControls.policy.in  com.endlessm.ParentalControls.rules  meson.build
build-aux/: meson_post_install.py
debian/: changelog  control  copyright  eos-parental-controls-data.install  eos-parental-controls-tools.install  gbp.conf  gir1.2-eos-parental-controls-0.install  gir1.2-malcontent-0.install  gir1.2-malcontent-ui-0.install  libeos-parental-controls-0-dev.install  libeos-parental-controls-0-tests.install  libeos-parental-controls-0.install  libmalcontent-0-dev.install  libmalcontent-0-tests.install  libmalcontent-0.install  libmalcontent-ui-0-dev.install  malcontent-control.install  malcontent-data.install  malcontent-pam.install  malcontent-tools.install  rules
debian/tests/: control  gnome-desktop-testing
eos-parental-controls-client/: eos-parental-controls-client.py  meson.build
eos-parental-controls-client/docs/: eos-parental-controls-client.8
help/: LINGUAS
help/da/: da.po
help/id/: id.po
help/pl/: pl.po
help/sv/: sv.po
help/uk/: uk.po
libeos-parental-controls/: app-filter.c  app-filter.h  meson.build
libeos-parental-controls/tests/: accounts-service-iface.h  app-filter.c  meson.build
libmalcontent/: app-filter-private.h  app-filter.c  app-filter.h  manager.c  manager.h  meson.build  session-limits.c  session-limits.h
libmalcontent-ui/: gs-content-rating.c  gs-content-rating.h  malcontent-ui.gresource.xml  malcontent-ui.h  meson.build  restrict-applications-dialog.c  restrict-applications-dialog.ui  restrict-applications-selector.c  restrict-applications-selector.h  restricts-switch.css  user-controls.c  user-controls.h  user-controls.ui
libmalcontent/tests/: app-filter.c  meson.build  org.freedesktop.Accounts.User.xml  session-limits.c
malcontent-client/: malcontent-client.py
malcontent-client/docs/: malcontent-client.8
malcontent-control/: application.c  carousel.c  carousel.ui  gs-content-rating.c  gs-content-rating.h  main.ui  malcontent-control.gresource.xml  meson.build  org.freedesktop.MalcontentControl.appdata.xml.in  org.freedesktop.MalcontentControl.desktop.in  org.freedesktop.MalcontentControl.policy.in  restrict-applications-dialog.c  restrict-applications-dialog.h  restrict-applications-selector.c  restrict-applications-selector.ui  user-controls.c  user-controls.h  user-controls.ui  user-selector.c
pam/: meson.build
pam/tests/: pam_malcontent.c
po/: LINGUAS  POTFILES.in  af.po  ar.po  bg.po  bn.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  kk.po  ko.po  lt.po  lv.po  meson.build  ml.po  ms.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  (+13 more)
